# rocbuild

./: .gitignore  CMakeLists.txt  README.md  basic.cmake  ninja_colorful_output.cmake  rocbuild.cmake  rocpkg.py  rocsetup.cmake  test.py
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/atomic/: CMakeLists.txt  demo.cpp
examples/clang-tidy/: CMakeLists.txt  point.cpp
examples/gen_asm/: CMakeLists.txt
examples/hello/: CMakeLists.txt  hello.c
examples/imported_no_soname/: CMakeLists.txt  build.sh  test.c
examples/imported_no_soname/foo/: Makefile
examples/program/: CMakeLists.txt
examples/runtime_path/: CMakeLists.txt  bar.c  foo.c  test.c
examples/subdir/: CMakeLists.txt
examples/thread/: CMakeLists.txt  demo.cpp
examples/use_opencv/: CMakeLists.txt  use_opencv.cpp
plugins/: QueryCodePage.py  README.md  asan.cmake  clang-tidy.cmake  cppcheck.cmake  dll_checker.cpp  dll_checker.py  msvc_enlarge_stack_size.cmake  msvc_execution_encoding.cmake  msvc_ignore_fopen_warning.cmake  msvc_ignore_stdext_arr_iters_warning.cmake  pdbdump.c  stack-usage.cmake  summary.cmake  windows_source_encoding.cmake
plugins/overlook/: README.md  overlook.cmake
plugins/overlook/tests/: CMakeLists.txt  test06.cpp  test07.cpp  test19.cpp  test38.cpp  test39.cpp
plugins/overlook/tests/test04/: CMakeLists.txt
plugins/overlook/tests/test15/: CMakeLists.txt
plugins/overlook/tests/test17/: CMakeLists.txt
plugins/overlook/tests/test31/: CMakeLists.txt
plugins/overlook/tests/test_rule27/: CMakeLists.txt
recipes/cJSON/: CMakeLists.txt
recipes/cereal/: CMakeLists.txt
recipes/clinfo/: CMakeLists.txt
recipes/eigen/: CMakeLists.txt
recipes/gtest/: CMakeLists.txt
tests/artifacts_path/: CMakeLists.txt
tests/artifacts_path/sub/: CMakeLists.txt
tests/asan/: CMakeLists.txt  basic-global-overflow.cpp  matrix.hpp  test_matrix.cpp  use_opencv.cpp
tests/copy_dlls/: CMakeLists.txt  test.c
tests/debug_postfix/: CMakeLists.txt
tests/hide_symbols/: CMakeLists.txt
tests/link_as_needed/: CMakeLists.txt  foo_math.c  foo_math.h
tests/postfix/: CMakeLists.txt
tests/src/: bar.c  bar.h  bar_internal.c  bar_internal.h  baz.c  baz.h  foo.c  foo.h
tests/unused_data_and_function/: CMakeLists.txt  test.c
toolchains/: gcc-aarch64-none-linux-gnu.cmake  gcc-arm-none-eabi.cmake  qnx-aarch64.cmake  toolchain-checker.cmake  vs2015-x64.cmake  vs2022-arm64.cmake  vs2022-x64.cmake
use_recipes/cJSON/: CMakeLists.txt  main.cpp
use_recipes/gtest/: CMakeLists.txt
