cmake_minimum_required(VERSION 3.10)
project(test_overlook)

include(../overlook.cmake)

add_executable(test1 test1.c)
add_executable(test2 test2.c)
add_executable(test3 test3.c)
add_subdirectory(test4 test4)
add_executable(test5 test5.cpp)
add_executable(test6 test6.cpp)
add_executable(test7 test7.cpp)
add_executable(test8 test8.cpp)
add_executable(test9 test9.cpp)
add_executable(test10 test10.c)
add_executable(test11 test11.cpp)
add_executable(test12 test12.c)
add_executable(test13 test13.c)
add_executable(test14 test14.c)
add_subdirectory(test15 test15)
add_executable(test16 test16.cpp)
add_subdirectory(test17 test17)
add_executable(test18 test18.cpp)
add_executable(test19 test19.cpp)
add_executable(test20 test20.cpp)
add_executable(test21 test21.cpp)
add_executable(test22 test22.cpp)
add_executable(test23 test23.cpp)
add_executable(test24 test24.cpp)
add_executable(test25 test25.cpp)
add_executable(test26 test26.cpp)
add_executable(test27 test27.cpp)
add_executable(test28 test28.cpp)
add_executable(test29 test29.cpp)
add_executable(test30 test30.cpp)
add_subdirectory(test31 test31)
add_executable(test32 test32.cpp)
add_executable(test33 test33.cpp)
add_executable(test34 test34.cpp)
add_executable(test35 test35.cpp)
add_executable(test36 test36.cpp)
add_executable(test37 test37.cpp)